--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -248,7 +248,7 @@
   }
 
   .home-container {
-    width: 90%;
+    // width: 90%;
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -296,14 +296,14 @@
   }
 
   .home-container {
-    width: 80%;
+    // width: 80%;
     display: flex;
     justify-content: center;
     flex-direction: row;
   }
 
   .home_tech-stack {
-    width: 80%;
+    width: 100%;
   }
 
   .slider .slide-track {
